--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,7 @@ jobs:
       - powershell: |
           Import-Module '.\scripts.ps1'
           InstallMSYS64
-          C:\msys64\usr\bin\pacman -Syy --noconfirm pacman
-          C:\msys64\usr\bin\pacman -Suu --noconfirm --ask 20
+          C:\msys64\usr\bin\pacman -Syyu --noconfirm --ask 20
         displayName: Installing msys64 build environment
       - script: |
           rmdir /s /Q "C:\Program Files\Boost"
