--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 clone_folder: C:\msys64\home\mingw-packages
+image: Visual Studio 2019
 
 environment:
   DISABLE_QUALITY_CHECK: true
@@ -22,9 +23,9 @@ environment:
 
 build_script:
   - rmdir /s /Q C:\OpenSSL-Win32 C:\OpenSSL-Win64
-  - ps: Start-FileDownload 'http://repo.msys2.org/msys/x86_64/pacman-5.2.1-6-x86_64.pkg.tar.xz'
-  - C:\msys64\usr\bin\pacman -U --noconfirm pacman-5.2.1-6-x86_64.pkg.tar.xz
-  - del pacman-5.2.1-6-x86_64.pkg.tar.xz
+#  - ps: Start-FileDownload 'http://repo.msys2.org/msys/x86_64/pacman-5.2.1-6-x86_64.pkg.tar.xz'
+#  - C:\msys64\usr\bin\pacman -U --noconfirm pacman-5.2.1-6-x86_64.pkg.tar.xz
+#  - del pacman-5.2.1-6-x86_64.pkg.tar.xz
   - C:\msys64\usr\bin\pacman -Syu --noconfirm
   - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/ci-build.sh"
 #  - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/fullindex.sh"
