--- a/mingw-w64-hiredis/PKGBUILD
+++ b/mingw-w64-hiredis/PKGBUILD
@@ -2,7 +2,7 @@
 
 _realname=hiredis
 pkgbase=mingw-w64-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
+pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.0.0
 pkgrel=1
 pkgdesc="A client library for accessing the redis (https://redis.io/) data store"
@@ -12,7 +12,7 @@ source=(${_realname}-${pkgver}.tar.gz::https://github.com/redis/hiredis/archive/
         '01-cmake-static-libs.patch')
 sha256sums=('2a0b5fe5119ec973a0c1966bfc4bd7ed39dbce1cb6d749064af9121fe971936f'
             'dc9595acf5e6d6c46d56eadf966682ccba41f322564ff0baadeee7a25c5793a5')
-arch=('i686' 'x86_64')
+arch=('any')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-cmake")
 options=('staticlibs' 'strip' '!libtool')
