--- a/mingw-w64-libmariadbclient/PKGBUILD
+++ b/mingw-w64-libmariadbclient/PKGBUILD
@@ -65,6 +65,13 @@ build() {
     -DWITH_REMOTEIO=OFF \
     -DWITH_OPENSSL=ON \
     -DWITH_MYSQLCOMPAT=OFF \
+    -DCLIENT_PLUGIN_AUTH_GSSAPI_CLIENT=STATIC \
+    -DCLIENT_PLUGIN_DIALOG=STATIC \
+    -DCLIENT_PLUGIN_CLIENT_ED25519=STATIC \
+    -DCLIENT_PLUGIN_CACHING_SHA2_PASSWORD=STATIC \
+    -DCLIENT_PLUGIN_SHA256_PASSWORD=STATIC \
+    -DCLIENT_PLUGIN_MYSQL_CLEAR_PASSWORD=STATIC \
+    -DCLIENT_PLUGIN_MYSQL_OLD_PASSWORD=STATIC \
     ../mariadb-connector-c-${pkgver}-src
   #Fix config files for local system
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
