--- a/mingw-w64-libssh2/PKGBUILD
+++ b/mingw-w64-libssh2/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libssh2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.10.1
+pkgver=1.11.0
 pkgrel=9800
 pkgdesc="A library implementing the SSH2 protocol as defined by Internet Drafts (mingw-w64)"
 arch=('any')
@@ -14,24 +14,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
               "autoconf" "automake" "libtool")
 depends=("${MINGW_PACKAGE_PREFIX}-openssl" "${MINGW_PACKAGE_PREFIX}-zlib")
 options=('staticlibs' 'strip')
-
-# Build from git for now: https://github.com/libssh2/libssh2/issues/536#issuecomment-892897873
-source=("${_realname}-${pkgver}"::"git+https://github.com/libssh2/${_realname}.git"
-        "fix-pkgconfig.patch"
-        "https://github.com/libssh2/libssh2/commit/b952674f.diff"
-        "https://github.com/libssh2/libssh2/commit/17c9c1fc.diff")
-sha256sums=('SKIP'
-            '7a6545f6d457ad008aacefe04a60727c02d33927c8a903745bf191f69cc8ba55'
+source=("https://libssh2.org/download/${_realname}-${pkgver}.tar.gz"{,.asc}
+        fix-pkgconfig.patch)
+sha256sums=('3736161e41e2693324deb38c26cfdc3efe6209d634ba4258db1cecff6a5ad461'
             'SKIP'
-            'SKIP')
+            '7a6545f6d457ad008aacefe04a60727c02d33927c8a903745bf191f69cc8ba55')
+validpgpkeys=('27EDEAF22F3ABCEB50DB9A125CC908FDB71E12C2'   # Daniel Stenberg
+              '914C533DF9B2ADA2204F586D78E11C6B279D5C91')  # Daniel Stenberg (old key)
 
 prepare() {
   cd ${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/fix-pkgconfig.patch
-  #patch --reverse -p1 -i ${srcdir}/b952674f.diff
-  #patch --reverse -p1 -i ${srcdir}/17c9c1fc.diff
   autoreconf -fi
-  #sed -i 's/libssl libcrypto/libssl libcrypto libcrypt32 libgdi32 libws2_32/g' configure
 }
 
 build() {
@@ -44,7 +38,7 @@ build() {
   #  local _SSL_BACKEND=wincng
   #else
     local _SSL_BACKEND=openssl
-    export LIBS=$(pkg-config --libs-only-l --static libssl)
+    export LIBS="$(pkg-config --libs-only-l --static libssl)"
   #fi
 
   ../${_realname}-${pkgver}/configure \
@@ -52,6 +46,7 @@ build() {
     --build=${MINGW_CHOST} \
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
+    --disable-examples-build \
     --enable-static \
     --disable-shared \
     --with-crypto=$_SSL_BACKEND
