--- a/mingw-w64-libssh/PKGBUILD
+++ b/mingw-w64-libssh/PKGBUILD
@@ -3,63 +3,62 @@
 _realname=libssh
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.9.5
+pkgver=0.10.5
 pkgrel=1
 pkgdesc="Library for accessing ssh client services through C libraries (mingw-w64)"
 arch=('any')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://www.libssh.org/"
-license=("LGPL")
-install=libssh-${CARCH}.install
+license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-pkg-config"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cmake")
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 options=('staticlibs' 'strip')
 validpgpkeys=('8DFF53E18F2ABC8D8F3C92237EE0FC4DCC014E3D') # Andreas Schneider <asn@cryptomilk.org>
-source=("https://www.libssh.org/files/${pkgver%.*}/${_realname}-${pkgver}.tar.xz"
-        "https://www.libssh.org/files/${pkgver%.*}/${_realname}-${pkgver}.tar.xz.asc"
-        "mingw-as-unix.patch"
-         001-install-static-lib.patch)
-sha256sums=('acffef2da98e761fc1fd9c4fddde0f3af60ab44c4f5af05cd1b2d60a3fa08718'
+source=("https://www.libssh.org/files/${pkgver%.*}/${_realname}-${pkgver}.tar.xz"{,.asc}
+         001-install-static-lib.patch
+         002-libssh-fix-pkgconfig.patch
+         010-lld.patch)
+sha256sums=('b60e2ff7f367b9eee2b5634d3a63303ddfede0e6a18dfca88c44a8770e7e4234'
             'SKIP'
-            'bac0a32f54368f55abbce14dea3dfba27a24321d590022b93bb8369a2aaa4993'
-            'eca5206ca1d3b3ff76fab5759ab1a8387655fe31c383a2d125d8e13c86098bd8')
-noextract=(${_realname}-${pkgver}.tar.xz)
+            'ff70c3719ad033fac8ed0b6c9c15c66160bda1dedfbcbfb78227e015ccab72c1'
+            '45eb3be0e97f9d50144ac14404545a1a337609b3d650aa3b2c353affefb220cd'
+            'b466e14c1f3e34b0891ea04ad8c008984cada054398cadd2fb2bb44460ae198f')
 
 prepare() {
-  [[ -d ${_realname}-${pkgver} ]] && rm -rf ${_realname}-${pkgver}
-  tar -xJvf ${_realname}-${pkgver}.tar.xz -C ${srcdir} || true
-
   cd ${srcdir}/${_realname}-${pkgver}
-  patch -p1 -i ${srcdir}/mingw-as-unix.patch
   patch -p1 -i ${srcdir}/001-install-static-lib.patch
+  patch -p1 -i ${srcdir}/002-libssh-fix-pkgconfig.patch
+  patch -p1 -i ${srcdir}/010-lld.patch
 }
 
 build() {
-  [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
-  mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
+  mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
 
   # NB: building only static libs seems broken
   # So we build both and delete the dlls below
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
-    -G"MSYS Makefiles" \
+    -G"Ninja" \
     -DCMAKE_C_STANDARD_LIBRARIES="-lws2_32 -lcrypt32" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DCMAKE_BUILD_TYPE=Release \
     -DWITH_GSSAPI=OFF \
     -DUNIT_TESTING=OFF \
     -DBUILD_STATIC_LIB=ON \
+    -DBUILD_SHARED_LIBS=ON \
     ../${_realname}-${pkgver}
 
-  make all
+  ${MINGW_PREFIX}/bin/cmake.exe --build ./
 }
 
 
 package() {
-  cd "${srcdir}/build-${MINGW_CHOST}"
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/build-${MSYSTEM}"
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install .
   rm -R ${pkgdir}${MINGW_PREFIX}/bin
   rm ${pkgdir}${MINGW_PREFIX}/lib/*.dll.a
 }
