--- a/mingw-w64-meson/PKGBUILD
+++ b/mingw-w64-meson/PKGBUILD
@@ -3,24 +3,25 @@
 _realname=meson
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.58.0
+pkgver=0.64.1
 pkgrel=1
 pkgdesc="High-productivity build system (mingw-w64)"
 arch=('any')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://mesonbuild.com/"
-license=("Apache 2")
+license=("spdx:Apache-2.0")
 options=('strip' 'staticlibs')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-ninja")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools" "${MINGW_PACKAGE_PREFIX}-gcc")
 source=("https://github.com/mesonbuild/${_realname}/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz"
         'color-term.patch'
         '0002-Default-to-sys.prefix-as-the-default-prefix.patch'
         '0004-fix-gtk-doc.patch'
         'install-man.patch')
-sha256sums=('f4820df0bc969c99019fd4af8ca5f136ee94c63d8a5ad67e7eb73bdbc9182fdd'
+sha256sums=('3a8e030c2334f782085f81627062cc6d4a6771edf31e055ffe374f9e6b089ab9'
             '5805aed0a117536eb16dd8eef978c6be57c2471b655ede63e25517c28b4f4cf0'
-            '675e79a0fc78b4236f5b803ffd2e745cb2ff125c9b4a03657773915183a4e19a'
+            '54943aed77307d3c202eceb127a70600745e80990bd4623fe9e553f2db04d571'
             '0f9177102976bbcbdf50c1da49842783a0c77be939e839f1bf91dcaba6a5cdee'
             '0682a36cb75e545a78b81293303835a16171f25baf949905dc08029436efff84')
 
